// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CircleBadge > respects the inline prop 1`] = `
<div
  class="sc-gsFSXq feWHvC"
/>
`;

exports[`CircleBadge > respects the variant prop 1`] = `
<div
  class="sc-gsFSXq NBqFO"
/>
`;

exports[`CircleBadge > uses the size prop to override the variant prop 1`] = `
<div
  class="sc-gsFSXq eWWFbq"
  size="20"
/>
`;
